# CharacterClassification

./: CMakeLists.txt  DollarIndex.cpp  DollarIndex.h  LookInData.py  README.md  RoubleIndex.cpp  RoubleIndex.h  main.cpp  precompose.cpp  precompose.h  stdafx.h
Cedition/: BMP.c  BMP.h  CMakeLists.txt  DataStructure.h  Datastructure.c  Feature.c  Feature.h  OCR_Dollar.c  OCR_Dollar.h  main.c  stdafx.h
Data/DensityFeature/: Dollar_character.txt  Dollar_number.txt
